# mlops

./: Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yml
core/: train.py
