[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Dragonflip <jpmarquesdeoliveira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
boto3 = "^1.28.52"
sagemaker = "^2.125.0"
scikit-learn = "^1.3.2"
mlflow = "^2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
